fix(fr this time): removed ugly gap in python-style.css

--- a/src/css/python-style.css
+++ b/src/css/python-style.css
@@ -254,7 +254,7 @@
 
       .nav-link { font-size: 16px; padding: 10px; display: block; text-align: center; }
       
-      .hero { justify-content: flex-start; padding-top: 100px; }
+      .hero { justify-content: flex-start; padding-top: 75px; }
       .hero-badge { margin-top: 20px; margin-bottom: 20px; }
       .hero-title { line-height: 1.1; }
       .hero-cta { flex-direction: column; width: 100%; max-width: 400px; margin: 0 auto; }
